--- a/app/src/main/res/layout/activity_results_settlement_new.xml
+++ b/app/src/main/res/layout/activity_results_settlement_new.xml
@@ -29,9 +29,9 @@
             android:id="@+id/status_game_type"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_marginEnd="4dp"
-            android:layout_toLeftOf="@+id/vertical_divider_line"
+            android:layout_toStartOf="@+id/vertical_divider_line"
             android:layout_weight="2"
             android:background="@color/color_FFFFFF"
             app:arrowAtEnd="true"
