--- a/app/src/main/res/layout/view_no_record.xml
+++ b/app/src/main/res/layout/view_no_record.xml
@@ -3,10 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:background="@color/color_141414_F3F4F5"
-    >
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/list_no_record_img"
