--- a/app/src/main/res/layout/fragment_bet_record.xml
+++ b/app/src/main/res/layout/fragment_bet_record.xml
@@ -1,144 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="SpUsage">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/toolBar"
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tool_bar_height"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingHorizontal="18dp"
-        app:layout_scrollFlags="scroll|enterAlways"
-        tools:ignore="SpUsage,RtlSymmetry,ContentDescription">
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:src="@drawable/bg_bet_record_top"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/iv_menu_left"
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="@null"
-            android:scaleType="fitStart"
-            android:src="@drawable/icon_menu"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+    <LinearLayout
+        android:id="@+id/toolBarContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/iv_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_marginStart="@dimen/margin_10"
-            android:adjustViewBounds="true"
-            android:contentDescription="@null"
-            android:scaleType="fitStart"
-            android:src="@drawable/logo_okbet_color"
-            app:layout_constraintStart_toEndOf="@+id/iv_menu_left"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+        <View
+            android:id="@+id/v_statusbar"
+            android:layout_width="match_parent"
+            android:layout_height="0dp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_bet_all_sports"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:id="@+id/toolBar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tool_bar_height"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:background="@drawable/bg_white_btn_login_radius_11"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingHorizontal="18dp"
+            app:layout_scrollFlags="scroll|enterAlways"
             tools:ignore="SpUsage,RtlSymmetry,ContentDescription">
 
-            <TextView
-                android:id="@+id/tv_all_sports"
+            <ImageView
+                android:id="@+id/iv_menu_left"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#025BE8"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/margin_10"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_height="24dp"
+                android:adjustViewBounds="true"
+                android:contentDescription="@null"
+                android:scaleType="fitStart"
+                android:src="@drawable/icon_menu"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/iv_all_sports_arrow"
-                android:text="所有体育"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/iv_all_sports_arrow"
+                android:id="@+id/iv_logo"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/icon_all_sports_arrow"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="@dimen/margin_5"
-                android:layout_marginLeft="@dimen/margin_5"
-                app:layout_constraintStart_toEndOf="@+id/tv_all_sports"
+                android:layout_height="32dp"
+                android:layout_marginStart="@dimen/margin_10"
+                android:adjustViewBounds="true"
+                android:contentDescription="@null"
+                android:scaleType="fitStart"
+                android:src="@drawable/logo_okbet_color"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/iv_menu_left"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_bet_all_sports"
+                android:layout_width="wrap_content"
+                android:layout_height="28dp"
+                android:background="@drawable/selector_bg_home_tab_menu"
+                android:minWidth="100dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                tools:ignore="SpUsage,RtlSymmetry,ContentDescription">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:duplicateParentState="true"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/tv_all_sports"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="13dp"
+                        android:duplicateParentState="true"
+                        android:text="@string/all_sport"
+                        android:textColor="@color/selector_blue_white" />
+
+                    <ImageView
+                        android:id="@+id/iv_all_sports_arrow"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginEnd="6dp"
+                        android:duplicateParentState="true"
+                        android:src="@drawable/selector_blue_white_arrow" />
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolBar"
-        android:layout_marginLeft="@dimen/margin_15"
-        android:layout_marginTop="18dp"
-        android:layout_marginRight="@dimen/margin_15"
-        android:background="@drawable/okbet_bg_login_card">
+        android:layout_height="0dp"
+        android:paddingHorizontal="4dp"
+        android:layout_weight="1"
+        android:background="@drawable/bg_bet_record_tab_1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolBarContainer">
 
-        <com.google.android.material.tabs.TabLayout
+        <LinearLayout
             android:id="@+id/bet_tab"
             android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:layout_marginTop="@dimen/margin_14"
-            android:background="@color/color_191919_FCFCFC"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tabGravity="fill"
-            app:tabIndicatorFullWidth="true"
-            app:tabMode="fixed"
-            app:tabPaddingEnd="0dp"
-            app:tabPaddingStart="0dp"
-            app:tabRippleColor="@null"
-            app:tabSelectedTextColor="@color/color_BBBBBB_333333"
-            app:tabTextAppearance="@style/NoUppercaseTab"
-            app:tabTextColor="@color/color_7F7F7F_999999">
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="11dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/first_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout="@layout/item_bet_list_settled_tab" />
+            <TextView
+                android:id="@+id/tv_tab_settled"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/settled"
+                android:textColor="@color/color_FFFFFF_414655"
+                android:textSize="@dimen/textSize14sp" />
 
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/second_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout="@layout/item_bet_list_unsettled_tab" />
+            <TextView
+                android:id="@+id/tv_tab_not_settled"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/not_settled"
+                android:textColor="@color/color_6C7BA8_6C7BA8"
+                android:textSize="@dimen/textSize14sp" />
 
-        </com.google.android.material.tabs.TabLayout>
+        </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:id="@+id/cl_bet_sheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="11dp"
             android:background="@color/color_191919_FCFCFC"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/bet_tab"
             tools:context="org.cxct.sportlottery.ui.main.accountHistory.next.AccountHistoryNextFragment"
             tools:ignore="SpUsage">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
             <View
                 android:layout_width="30dp"
                 android:layout_height="0.5dp"
-                android:background="#A7B2C4"
+                android:background="@color/color_6C7BA8_A7B2C4"
                 app:layout_constraintBottom_toBottomOf="@+id/tvUsTime"
                 app:layout_constraintStart_toEndOf="@+id/tvUsTime"
                 app:layout_constraintTop_toTopOf="@+id/tvUsTime" />
@@ -147,13 +176,12 @@
                 android:id="@+id/tvUsTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_8"
+                android:layout_marginVertical="8dp"
                 android:layout_marginEnd="@dimen/margin_10"
                 android:drawablePadding="@dimen/margin_6"
                 android:text="@string/text_us_east_time"
-                android:textColor="@color/color_A7B2C4"
+                android:textColor="@color/color_6C7BA8_A7B2C4"
                 android:textSize="@dimen/textSize12sp"
-                app:drawableTint="@color/color_A7B2C4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -161,66 +189,78 @@
             <View
                 android:layout_width="30dp"
                 android:layout_height="0.5dp"
-                android:background="#A7B2C4"
+                android:background="@color/color_6C7BA8_A7B2C4"
                 app:layout_constraintBottom_toBottomOf="@+id/tvUsTime"
                 app:layout_constraintEnd_toStartOf="@+id/tvUsTime"
                 app:layout_constraintTop_toTopOf="@+id/tvUsTime" />
+            </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/linearLayout5"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/settled_title_bar"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="10dp"
-                android:background="#F3F9FF"
-                android:gravity="center"
-                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="14dp"
+                app:cardCornerRadius="2dp"
+                app:cardElevation="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvUsTime">
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
+                <LinearLayout
+                    android:id="@+id/linearLayout5"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:background="@color/color_F3F9FF"
                     android:gravity="center"
-                    android:text="@string/date"
-                    android:textColor="#6C7BA8"
-                    android:textSize="@dimen/textSize12sp" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:gravity="center"
-                    android:text="@string/bet_amount"
-                    android:textColor="#6C7BA8"
-                    android:textSize="@dimen/textSize12sp" />
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.5"
+                        android:gravity="center"
+                        android:text="@string/date"
+                        android:textColor="@color/color_6C7BA8_6C7BA8"
+                        android:textSize="@dimen/textSize12sp" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:gravity="center"
-                    android:text="@string/available_amount"
-                    android:textColor="#6C7BA8"
-                    android:textSize="@dimen/textSize12sp" />
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.5"
+                        android:gravity="center"
+                        android:text="@string/bet_amount"
+                        android:textColor="@color/color_6C7BA8_6C7BA8"
+                        android:textSize="@dimen/textSize12sp" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:gravity="center"
-                    android:text="@string/win_lose"
-                    android:textColor="#6C7BA8"
-                    android:textSize="@dimen/textSize12sp" />
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:gravity="center"
+                        android:text="@string/available_amount"
+                        android:textColor="@color/color_6C7BA8_6C7BA8"
+                        android:textSize="@dimen/textSize12sp" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.5"
+                        android:gravity="center"
+                        android:text="@string/win_lose"
+                        android:textColor="@color/color_6C7BA8_6C7BA8"
+                        android:textSize="@dimen/textSize12sp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
 
         <com.scwang.smart.refresh.layout.SmartRefreshLayout
             android:id="@+id/sm_first_tab_refresh"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginBottom="19dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cl_bet_sheet"
             app:srlDragRate="0.3"
             app:srlEnableLoadMore="true"
@@ -238,4 +278,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
