--- a/app/src/main/res/layout/item_other_bet_record.xml
+++ b/app/src/main/res/layout/item_other_bet_record.xml
@@ -34,8 +34,8 @@
                 android:id="@+id/tv_datetime"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="center"
+                android:layout_weight="1.5"
+                android:gravity="start"
                 android:maxLines="1"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="@dimen/textSize12sp"
@@ -49,7 +49,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
-                android:layout_weight="1"
+                android:layout_weight="1.5"
                 android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="1"
