--- a/app/src/main/res/layout/item_sport_spinner.xml
+++ b/app/src/main/res/layout/item_sport_spinner.xml
@@ -28,6 +28,7 @@
         android:id="@+id/viewDivider"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
+        android:layout_marginHorizontal="10dp"
         android:background="@color/color_A7B2C4" />
 
 </LinearLayout>
